# horus-patrol

./: CMakeLists.txt  README.md  package.xml
include/horus_patrol/: cmove_dialog.hpp  horus_logger.hpp  login_dialog.hpp  main_window.hpp  patrol_dialog.hpp  robot.hpp  ros_node.hpp  routemanager_dialog.hpp  rviz_interface.hpp  threat_detection.hpp  user_queries.hpp  usermanager_dialog.hpp
res/: main.qml  res.qrc
res/form/: Mapping.ui.qml  Patrolling.ui.qml
res/view/: UserAccess.qml
resources/: images.qrc  sounds.qrc
src/: cmove_dialog.cpp  horus_logger.cpp  login_dialog.cpp  main.cpp  main_window.cpp  patrol_dialog.cpp  robot.cpp  ros_node.cpp  routemanager_dialog.cpp  rviz_interface.cpp  threat_detection.cpp  user_queries.cpp  usermanager_dialog.cpp
ui/: cmove_dialog.ui  login_dialog.ui  main_window.ui  patrol_dialog.ui  routemanager_dialog.ui  usermanager_dialog.ui
